ignoring all_cities.txt

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ static/countries_deu_eng.html
 static/countries_deu_eng.html
 static/country_codes.html
 static/countries_deu_eng.html
+static/all_cities.txt
