offline capability: download bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,9 @@ static/countries_deu_eng.html
 static/country_codes.html
 static/countries_deu_eng.html
 static/all_cities.txt
+static/bootstrap
 bfg-1.13.0.jar
 *.jpg
+.DS_Store
+.DS_Store
+static/.DS_Store
